@@ -342,9 +342,17 @@ MySQL_Prepared_ResultSet::getDouble(unsigned int columnIndex) const
 			CPP_INFO("It's a string");
 			return atof(getString(columnIndex + 1).c_str());
 		case MYSQL_TYPE_FLOAT:
-			return !*stmt->bind[columnIndex].is_null? *reinterpret_cast<float *>(stmt->bind[columnIndex].buffer):0.;
+		{
+			double ret = !*stmt->bind[columnIndex].is_null? *reinterpret_cast<float *>(stmt->bind[columnIndex].buffer):0.;
+			CPP_INFO_FMT("value=%10.10f", ret);
+			return ret;
+		}
 		case MYSQL_TYPE_DOUBLE:
-			return !*stmt->bind[columnIndex].is_null? *reinterpret_cast<double *>(stmt->bind[columnIndex].buffer):0.;
+		{
+			double ret = !*stmt->bind[columnIndex].is_null? *reinterpret_cast<double *>(stmt->bind[columnIndex].buffer):0.;
+			CPP_INFO_FMT("value=%10.10f", ret);
+			return ret;
+		}
 	}
 	throw sql::MethodNotImplementedException("MySQL_Prepared_ResultSet::getDouble: unhandled type. Please, report");
 }
