@@ -48,6 +48,9 @@ Beta  1.0.2 - xxxx-xx-xx
 
 - Fixed MySQL_ResultSet to be binary safe. (Andrey)
 
+- Implemented getScale(), getPrecision() and getColumnDisplaySize() for
+  MySQL_ResultSetMetaData and MySQL_Prepared_ResultSetMetaData. (Andrey)
+
 
 Alpha  1.0.1 - 2008-12-01
 
